kubernetes/apps/selfhosted/metamcp/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metamcp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metamcp
      k8s:io.kubernetes.pod.namespace: selfhosted
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: n8n
            k8s:io.kubernetes.pod.namespace: selfhosted
        - matchLabels:
            app.kubernetes.io/name: openclaw
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "12008"
              protocol: TCP
